# antei

./: .gitignore  Cargo.toml  Makefile  README.md  user.ld
.github/workflows/: ci.yml
aligned_ptr/: Cargo.toml
aligned_ptr/src/: error.rs  lib.rs
apps/shell/: Cargo.toml
apps/shell/.cargo/: config.toml
apps/shell/src/: main.rs
apps/test_user_app/: Cargo.toml
apps/test_user_app/src/: lib.rs  main.rs
bootloader/bootx64/: Cargo.toml
bootloader/bootx64/src/: allocator.rs  asm.s  elf.rs  exit_boot_services.rs  fs.rs  gop.rs  io.rs  kernel.rs  lib.rs  main.rs  mapper.rs  mem.rs  paging.rs  panic.rs  system_table.rs
bootloader/stable_uefi/: Cargo.toml
bootloader/stable_uefi/src/: global.rs  handle.rs  lib.rs  result.rs  system_table.rs
bootloader/stable_uefi/src/protocol/: console.rs
bootloader/stable_uefi/src/service/: boot.rs  mod.rs
bootloader/uefi_global/: Cargo.toml
bootloader/uefi_global/src/: edid.rs  gop.rs  io.rs  lib.rs
bootloader/uefi_global/src/service/: boot.rs
bootloader/uefi_wrapper/: Cargo.toml
bootloader/uefi_wrapper/src/: error.rs  lib.rs  result.rs  status.rs  system_table.rs
bootloader/uefi_wrapper/src/protocol/: console.rs  edid.rs  mod.rs
bootloader/uefi_wrapper/src/protocol/console/: edid.rs  graphics_output.rs  mod.rs
bootloader/uefi_wrapper/src/protocols/: mod.rs
bootloader/uefi_wrapper/src/protocols/console/: edid.rs  graphics_output.rs  simple_text_output.rs
bootloader/uefi_wrapper/src/protocols/media/: file.rs  mod.rs  simple_file_system.rs
bootloader/uefi_wrapper/src/service/: boot.rs
bootx64/: Cargo.toml  build.rs
bootx64/.cargo/: config.toml
bootx64/src/: allocator.rs  asm.s  elf.rs  exit_boot_services.rs  fs.rs  gop.rs  initrd.rs  kernel.rs  lib.rs  main.rs  mapper.rs  paging.rs  panic.rs  rsdp.rs  stack.rs  system_table.rs
checkers/: run_clippy.sh  run_rustfmt.sh
drivers/tty/: Cargo.toml
drivers/tty/.cargo/: config.toml
drivers/tty/src/: lib.rs  main.rs  vram.rs  writer.rs
drivers/xhci/: Cargo.toml
drivers/xhci/src/: lib.rs  main.rs
kernel/: Cargo.toml  build.rs  kernel.ld
kernel/.cargo/: config.toml
kernel/src/: acpi.rs  asm.s  boot_info.rs  gdt.rs  idt.rs  initrd.rs  io.rs  lib.rs  libc.rs  log.rs  main.rs  syscall.rs  sysproc.rs  tests.rs  tss.rs
kernel/src/interrupt/: handler.rs  idt.rs  mod.rs
kernel/src/interrupt/timer/: mod.rs
kernel/src/mem/: accessor.rs  mapping.rs  mod.rs  phys.rs  pml4.rs  virt.rs
kernel/src/mem/accessor/: array.rs  mod.rs  single.rs
kernel/src/process/: address_space.rs  context.rs  elf.rs  ipc.rs  manager.rs  mod.rs  pid.rs
kernel/src/timer/: apic.rs  mod.rs  pm.rs
lib/aligned/: Cargo.toml
lib/aligned/src/: lib.rs  ptr.rs  slice.rs
lib/debug/: Cargo.toml
lib/debug/src/: asm.s  lib.rs
libs/acpi/: Cargo.toml
libs/acpi/src/: error.rs  fadt.rs  generic_address_structure.rs  lib.rs  rsdp.rs  xsdt.rs
libs/apic/: Cargo.toml
libs/apic/src/: lib.rs
libs/apic/src/local/: lvt.rs  mod.rs  timer.rs
libs/boot_info/: Cargo.toml
libs/boot_info/src/: lib.rs
libs/config/: Cargo.toml
libs/config/src/: lib.rs
libs/debug/: Cargo.toml
libs/debug/src/: lib.rs
libs/driver/: Cargo.toml
libs/driver/src/: lib.rs
libs/frame_allocator/: Cargo.toml
libs/frame_allocator/src/: lib.rs
libs/ipc/: Cargo.toml
libs/ipc/src/: asm.s  error.rs  lib.rs  message.rs  syscalls.rs
libs/kernel_mem/: Cargo.toml
libs/kernel_mem/src/: lib.rs  map.rs  virt.rs
libs/kernel_mem/src/accessor/: array.rs  mod.rs  single.rs
libs/kernel_mmap/: Cargo.toml
libs/kernel_mmap/src/: lib.rs
libs/message/: Cargo.toml
libs/message/src/: lib.rs
libs/page_range/: Cargo.toml
libs/pic/: Cargo.toml
libs/pic/src/: lib.rs
libs/pid/: Cargo.toml
libs/pid/src/: lib.rs  predefined.rs
libs/posix/: Cargo.toml
libs/posix/src/: lib.rs
libs/posix/src/sys/: types.rs
libs/predefined_mmap/: Cargo.toml
libs/predefined_mmap/src/: lib.rs
libs/qemu/: Cargo.toml
libs/qemu/src/: lib.rs
libs/r_acpi/: Cargo.toml
libs/r_acpi/src/: lib.rs
libs/syscalls/: Cargo.toml
libs/syscalls/src/: lib.rs
libs/uefi/: Cargo.toml
libs/uefi/src/: handle.rs  status.rs
libs/uefi/src/protocols/: mod.rs
libs/uefi/src/protocols/console/: graphics_output.rs  simple_text_output.rs
libs/uefi/src/protocols/media/: mod.rs
libs/uefi_wrapper/: Cargo.toml
libs/uefi_wrapper/src/: system_table.rs
libs/uefi_wrapper/src/protocols/: mod.rs
libs/uefi_wrapper/src/protocols/console/: graphics_output.rs  simple_text_output.rs
libs/uefi_wrapper/src/protocols/media/: simple_file_system.rs
libs/uefi_wrapper/src/service/: boot.rs
libs/vm/: Cargo.toml
libs/vm/src/: heap.rs  lib.rs  map.rs  phys.rs
libs/vm/src/accessor/: array.rs  mod.rs  single.rs
libs/vm/src/heap/: boxed.rs  mod.rs
libs/vm/src/map/: elf.rs  mod.rs
servers/init/: Cargo.toml  init.ld
servers/init/.cargo/: config.toml
servers/init/src/: lib.rs  main.rs
servers/pm/: Cargo.toml
servers/pm/.cargo/: config.toml
servers/pm/src/: lib.rs  main.rs
servers/pm/src/process/: manager.rs  mod.rs
servers/qemu_serial/: Cargo.toml
servers/qemu_serial/src/: main.rs
servers/vfs/: Cargo.toml
servers/vfs/.cargo/: config.toml
servers/vfs/src/: lib.rs  main.rs
servers/vfs/src/process/: manager.rs  mod.rs
servers/vm_server/: Cargo.toml
servers/vm_server/.cargo/: config.toml
servers/vm_server/src/: lib.rs  main.rs
servers/vm_server/src/process/: manager.rs  mod.rs
