[workspace]
members = [
    "bootx64",
    "kernel",
    "libs/acpi",
    "libs/apic",
    "libs/boot_info",
    "libs/config",
    "libs/debug",
    "libs/frame_allocator",
    "libs/ipc",
    "libs/pic",
    "libs/pid",
    "libs/posix",
    "libs/predefined_mmap",
    "libs/qemu",
    "libs/r_acpi",
    "libs/uefi",
    "libs/vm",
    "servers/init",
    "servers/pm",
]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
