[package]
name = "bootx64"
version = "0.1.0"
authors = ["Hiroki Tokunaga <tokusan441@gmail.com>"]
edition = "2018"

[lib]
name = "bootx64"
crate_type = ["cdylib"]

[dependencies]
r-efi = "3.2.0"
rlibc = "1.0.0"
x86_64 = { version = "0.13.5", features = ["instructions", "external_asm"], default-features = false }
