[package]
name = "bootx64"
version = "0.1.0"
authors = ["Hiroki Tokunaga <tokusan441@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[[bin]]
name = "bootx64"
test = false

[lib]
test = false

[features]
test_on_qemu = ["qemu"]

[dependencies]
aligned_ptr = "0.1.0"
boot_info = { path = "../libs/boot_info" }
elfloader = "0.15.0"
predefined_mmap = { path = "../libs/predefined_mmap" }
os_units = "0.4.2"
qemu = { path = "../libs/qemu", optional = true }
qemu_print = { version = "0.1.0", features = ["stable"], default-features = false }
rlibc = "1.0.0"
spinning_top = "0.2.4"
uefi = { path = "../libs/uefi" }
x86_64 = { version = "0.14.8", features = ["instructions", "external_asm"], default-features = false }

[build-dependencies]
cc = "1.0.73"
cfg_aliases = "0.1.1"
