[package]
name = "kernel"
version = "0.1.0"
authors = ["Hiroki Tokunaga <tokusan441@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[features]
test_on_qemu = ["qemu"]

[dependencies]
boot_info = { path = "../libs/boot_info" }
conquer-once = { version = "0.3.2", default-features = false }
qemu = { path = "../libs/qemu", optional = true }
qemu_print = { version = "0.1.0", features = ["stable"], default-features = false }
rlibc = "1.0.0"
x86_64 = { version = "0.14.4", features = ["instructions", "external_asm"], default-features = false }
