[package]
name = "kernel"
version = "0.1.0"
authors = ["Hiroki Tokunaga <tokusan441@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[features]
test_on_qemu = ["qemu", "kernel_mem/test_on_qemu"]

[[bin]]
name = "kernel"
test = false

[lib]
test = false

[dependencies]
accessor = "0.3.0"
aligned_ptr = "0.1.0"
boot_info = { path = "../libs/boot_info" }
conquer-once = { version = "0.3.2", default-features = false }
frame_allocator = { path = "../libs/frame_allocator" }
predefined_mmap = { path = "../libs/predefined_mmap" }
os_units = "0.4.2"
qemu = { path = "../libs/qemu", optional = true }
qemu_print = { version = "0.1.0", features = ["stable"], default-features = false }
rlibc = "1.0.0"
spinning_top = "0.2.4"
uefi = { path = "../libs/uefi" }
x86_64 = { version = "0.14.4", features = ["instructions", "external_asm"], default-features = false }
kernel_mem = { path = "../libs/kernel_mem" }

[build-dependencies]
cfg_aliases = "0.1.1"
