[package]
name = "kernel"
version = "0.1.0"
authors = ["Hiroki Tokunaga <tokusan441@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[features]
test_on_qemu = ["qemu", "vm/test_on_qemu"]

[[bin]]
name = "kernel"
test = false

[lib]
test = false

[dependencies]
accessor = "0.3.0"
acpi = { path = "../libs/acpi" }
aligned_ptr = "0.1.0"
boot_info = { path = "../libs/boot_info" }
conquer-once = { version = "0.3.2", default-features = false }
frame_allocator = { path = "../libs/frame_allocator" }
predefined_mmap = { path = "../libs/predefined_mmap" }
os_units = "0.4.2"
qemu = { path = "../libs/qemu", optional = true }
qemu_print = { version = "0.1.0", features = ["stable"], default-features = false }
spinning_top = "0.2.4"
uefi = { path = "../libs/uefi" }
x86_64 = { version = "0.14.9", features = ["instructions", "external_asm"], default-features = false }
vm = { path = "../libs/vm" }
log = "0.4.17"
apic = { path = "../libs/apic" }
pic = { path = "../libs/pic" }
cpio_reader = "0.1.0"
static_assertions = "1.1.0"
elfloader = "0.15.0"
heapless = "0.7.14"
rlibc = "1.0.0"
ipc_api = { path = "../libs/ipc", package = "ipc" }
arrayvec = { version = "0.7.2", default-features = false }
posix = { path = "../libs/posix" }
num-derive = { version = "0.3.3", default-features = false }
num-traits = { version = "0.2.15", default-features = false }
pid = { path = "../libs/pid" }
config = { path = "../libs/config" }
syscalls = { path = "../libs/syscalls" }

[build-dependencies]
cc = "1.0.73"
cfg_aliases = "0.1.1"
