[package]
name = "bootx64"
version = "0.1.0"
authors = ["Hiroki Tokunaga <tokusan441@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[[bin]]
name = "bootx64"

[dependencies]
rlibc = "1.0.0"
uefi_global = { path = "../uefi_global" }
uefi_wrapper = { path = "../uefi_wrapper" }
x86_64 = { version = "0.13.5", features = ["instructions", "external_asm"], default-features = false }
