[package]
name = "bootx64"
version = "0.1.0"
authors = ["Hiroki Tokunaga <tokusan441@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[[bin]]
name = "bootx64"

[dependencies]
aligned_ptr = "0.1.0"
os_units = "0.4.1"
rlibc = "1.0.0"
spinning_top = "0.2.4"
uefi_wrapper = { path = "../uefi_wrapper" }
x86_64 = { version = "0.14.3", features = ["instructions", "external_asm"], default-features = false }
