[package]
name = "uefi_global"
version = "0.1.0"
authors = ["Hiroki Tokunaga <tokusan441@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
conquer-once = { version = "0.3.2", default-features = false }
log = "0.4.14"
spinning_top = "0.2.3"
uefi_wrapper = { path = "../uefi_wrapper" }
