[package]
name = "tty"
version = "0.1.0"
edition = "2018"
license = "MIT OR Apache-2.0"

[[bin]]
name = "tty"
test = false

[lib]
test = false

[features]
test_on_qemu = []

[dependencies]
bit_field = "0.10.1"
conquer-once = { version = "0.3.2", default-features = false }
font8x8 = { version = "0.3.1", features = ["unicode"], default-features = false }
ipc = { path = "../../libs/ipc" }
num-traits = { version = "0.2.14", default-features = false }
os_units = "0.4.2"
rgb = "0.8.29"
rlibc = "1.0.0"
spinning_top = { version = "0.2.4", default-features = false }
syscalls = { path = "../../libs/syscalls" }
vek = { version = "0.15.5", features = ["libm"], default-features = false }
x86_64 = { version = "0.14.6", default-features = false }
