[package]
name = "ipc"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[build-dependencies]
cc = "1.0.73"

[dependencies]
posix = { path = "../posix" }
num-derive = { version = "0.3.3", default-features = false }
num-traits = { version = "0.2.14", default-features = false }
pid = { path = "../pid" }
