[package]
name = "qemu"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
static_assertions = "1.1.0"
x86_64 = { git = "https://github.com/rust-osdev/x86_64", features = ["instructions", "external_asm"], default-features = false }
