[package]
name = "syscalls"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
ipc = { path = "../ipc" }
num-derive = { version = "0.3.3", default-features = false }
num-traits = { version = "0.2.15", default-features = false }
os_units = "0.4.2"
pid = { path = "../pid/" }
x86_64 = { version = "0.14.9", default-features = false }
