[package]
name = "uefi"
version = "0.1.0"
authors = ["Hiroki Tokunaga <tokusan441@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[dependencies]
aligned_ptr = "0.1.0"
num-derive = "0.3.3"
num-traits = { version = "0.2.14", default-features = false }
r-efi = "4.0.0"
ucs2 = "0.3.2"
x86_64 = { version = "0.14.8", default-features = false }
