[package]
name = "uefi_wrapper"
version = "0.1.0"
authors = ["Hiroki Tokunaga <tokusan441@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[dependencies]
aligned_ptr = "0.1.0"
conquer-once = { version = "0.3.2", default-features = false }
num-derive = "0.3.3"
num-traits = { version = "0.2.14", default-features = false }
r-efi = "3.2.0"
spinning_top = "0.2.3"
ucs2 = "0.3.2"
