[package]
name = "vm"
version = "0.1.0"
edition = "2018"
license = "MIT OR Apache-2.0"

[features]
test_on_qemu = []

[dependencies]
accessor = "0.3.2"
aligned_ptr = "0.1.0"
conquer-once = { version = "0.3.2", default-features = false }
elfloader = "0.15.0"
frame_allocator = { path = "../frame_allocator" }
linked_list_allocator = { version = "0.9.1", default-features = false }
os_units = "0.4.2"
predefined_mmap = { path = "../predefined_mmap" }
spinning_top = "0.2.4"
uefi = { path = "../uefi" }
x86_64 = { version = "0.14.8", default-features = false, features = ["instructions", "external_asm"] }

[build-dependencies]
cfg_aliases = "0.1.1"
