[package]
name = "init"
version = "0.1.0"
edition = "2018"
license = "MIT OR Apache-2.0"

[[bin]]
name = "init"
test = false

[lib]
test = false

[features]
test_on_qemu = []

[dependencies]
ipc = { path = "../../libs/ipc" }
pid = { path = "../../libs/pid" }
rlibc = "1.0.0"
syscalls = { path = "../../libs/syscalls" }
