[package]
name = "pm"
version = "0.1.0"
edition = "2018"
license = "MIT OR Apache-2.0"

[[bin]]
name = "pm"
test = false

[lib]
test = false

[features]
test_on_qemu = []

[dependencies]
arrayvec = { version = "0.7.1", default-features = false }
config = { path = "../../libs/config" }
ipc = { path = "../../libs/ipc" }
pid = { path = "../../libs/pid" }
rlibc = "1.0.0"
spinning_top = { version = "0.2.4", default-features = false }
syscalls = { path = "../../libs/syscalls" }
