[package]
name = "qemu_serial"
version = "0.1.0"
edition = "2018"
license = "MIT OR Apache-2.0"

[[bin]]
name = "qemu_serial"
test = false

[lib]
test = false

[features]
test_on_qemu = []

[dependencies]
driver = { path = "../../libs/driver" }
ipc = { path = "../../libs/ipc" }
spinning_top = { version = "0.2.4", default-features = false }
uart_16550 = { version = "0.2.15", features = ["stable"], default-features = false }
