[package]
name = "vfs"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[[bin]]
name = "vfs"
test = false

[lib]
test = false

[features]
test_on_qemu = []

[dependencies]
config = { path = "../../libs/config" }
ipc = { path = "../../libs/ipc" }
pid = { path = "../../libs/pid" }
rlibc = "1.0.0"
spinning_top = { version = "0.2.4", default-features = false }
syscalls = { path = "../../libs/syscalls" }
