[package]
name = "vm_server"
version = "0.1.0"
edition = "2018"
license = "MIT OR Apache-2.0"

[[bin]]
name = "vm_server"
test = false

[lib]
test = false

[features]
test_on_qemu = []

[dependencies]
config = { path = "../../libs/config" }
pid = { path = "../../libs/pid" }
x86_64 = { version = "0.14.4", features = ["instructions", "external_asm"], default-features = false }
